crates/swc_ecma_parser/tests/test262-error-references/fail/f747102fa7882fec.js.stderr
error: Unexpected token `)`. Expected identifier, string literal, numeric literal or [ for the computed key
 --> $DIR/tests/test262-parser/fail/f747102fa7882fec.js:1:9
  |
1 | (class {)
  |         ^

